[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-shield"
version = "1.0.0"
description = "Servo, PWM, Motor, and Battery control for SunFounder Robot Shield via Arduino Bridge I2C"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "SunFounder"},
]
keywords = ["robot", "servo", "pwm", "motor", "arduino", "i2c"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/sunfounder/uno-q-ai-robot-plus"

[tool.setuptools.packages.find]
where = ["."]
include = ["robot_shield*"]
